fix(player): several bug fixes

--- a/nuxt/assets/css/tailwind.css
+++ b/nuxt/assets/css/tailwind.css
@@ -6,13 +6,16 @@
   a:focus {
     @apply outline-none;
     @apply ring;
+    @apply rounded;
   }
   button:focus {
     @apply outline-none;
     @apply ring;
+    @apply rounded;
   }
   .button:focus {
     @apply outline-none;
     @apply ring;
+    @apply rounded;
   }
 }
